# Doctor-s-Desk

./: .gitignore  MEDICINE_DATABASE.md  QUICKSTART.md  QUICK_START_SCRAPER.md  README.md  create-icon.js  index.html  package-lock.json  package.json  tsconfig.json
scripts/: README.md  medicines_raw.json  run_scraper.bat  scrape_medex_medicines.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs
src/api/: tauri.ts
src/components/: PatientForm.tsx
src/components/prescription/: MedicineSearchModal.tsx  PatientInfoBar.tsx  PrescriptionHeader.tsx  PrescriptionSection.tsx  PrintStyles.tsx  SearchModal.tsx
src/components/prescription-print/: DoctorHeader.tsx  PatientInfoBar.tsx  PrescriptionContent.tsx  PrescriptionFooter.tsx
src/data/: medicines.ts  prescriptionItems.ts
src/pages/: Dashboard.tsx  Login.tsx  PatientDetail.tsx  Patients.tsx  Prescription.tsx  PrescriptionPrint.tsx  Settings.tsx  Statistics.tsx
