[package]
name = "smartclinic-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5.0", features = ["api-all"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
